// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-82"
    >
      <div
        className="Component-header-80"
      />
      <div
        className="Component-container-77"
      >
        <div
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/"
        >
          Link - 
          <img
            alt="Prizey"
            className="Component-logoImage-81"
            src="/logo.png"
          />
        </div>
        <div
          className="Component-caption-75"
        />
        <div
          className="Component-children-76"
        >
          <h5
            className="MuiTypography-root-31 MuiTypography-h5-47 MuiTypography-alignCenter-54 Component-pageTitle-74"
          >
            Login
          </h5>
          <div
            renderButton={[Function]}
          >
            SignIn - 
            <button
              className="MuiButtonBase-root-28 MuiButton-root-2 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-raised-16 MuiButton-raisedPrimary-17 MuiButton-fullWidth-27"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-3"
              >
                LOGIN
              </span>
              <span
                className="MuiTouchRipple-root-67"
              />
            </button>
            <div
              className="Component-links-1"
            >
              <div
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                to="/sign-up"
              >
                Link - 
                <span
                  className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
                >
                  Register
                </span>
              </div>
              <div
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                to="/forgot-password"
              >
                Link - 
                <span
                  className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
                >
                  Forgot your password?
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Component-footer-78"
        >
          <div
            className="Component-footerLink-79"
            onClick={[Function]}
            rel="noopener noreferer"
            target="_blank"
            to="/terms_of_service"
          >
            Link - 
            <span
              className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorTextSecondary-64 MuiTypography-alignCenter-54"
            >
              TERMS
            </span>
          </div>
          <a
            className="Component-footerLink-79"
            href="https://app.termly.io/document/privacy-policy/8192f107-a2dc-4548-bf83-97907c6d83c3"
            onClick={[Function]}
            rel="noopener noreferer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorTextSecondary-64 MuiTypography-alignCenter-54"
            >
              PRIVACY
            </span>
          </a>
          <div
            className="Component-footerLink-79"
            onClick={[Function]}
            rel="noopener noreferer"
            target="_blank"
            to="/faq"
          >
            Link - 
            <span
              className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorTextSecondary-64 MuiTypography-alignCenter-54"
            >
              FAIRNESS / FAQ
            </span>
          </div>
          <div
            className="Component-footerLink-79"
            onClick={[Function]}
            rel="noopener noreferer"
            target="_blank"
            to="/all-prizes"
          >
            Link - 
            <span
              className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorTextSecondary-64 MuiTypography-alignCenter-54"
            >
              ALL PRIZES
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-28 MuiButton-root-2 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-raised-16 MuiButton-raisedPrimary-17 MuiButton-fullWidth-27"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-3"
    >
      LOGIN
    </span>
    <span
      className="MuiTouchRipple-root-67"
    />
  </button>,
  <div
    className="Component-links-1"
  >
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/sign-up"
    >
      Link - 
      <span
        className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
      >
        Register
      </span>
    </div>
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/forgot-password"
    >
      Link - 
      <span
        className="MuiTypography-root-31 MuiTypography-caption-41 MuiTypography-colorPrimary-61"
      >
        Forgot your password?
      </span>
    </div>
  </div>,
]
`;
